Reworked icon SASS to be DRYer

--- a/src/mustache/partials/content/nav-contact.mustache
+++ b/src/mustache/partials/content/nav-contact.mustache
@@ -1,8 +1,8 @@
 <nav class="nav-contact">
   <ul class="nav-contact-list">
-    <li><a class="icon-email" href="mailto:rich.cookson@gmail.com">rich.cookson@gmail.com</a></li>
-    <li><a class="icon-telephone" href="tel:447792871698">+44 7792 871 698</a></li>
-    <li><a class="icon-github" rel="external" href="https://github.com/hellorich">github/hellorich</a></li>
-    <li><a class="icon-twitter" rel="external" href="https://twitter.com/withaloop">@withaloop</a></li>
+    <li><a class="icon icon-email" href="mailto:rich.cookson@gmail.com">rich.cookson@gmail.com</a></li>
+    <li><a class="icon icon-telephone" href="tel:447792871698">+44 7792 871 698</a></li>
+    <li><a class="icon icon-github" rel="external" href="https://github.com/hellorich">github/hellorich</a></li>
+    <li><a class="icon icon-twitter" rel="external" href="https://twitter.com/withaloop">@withaloop</a></li>
   </ul>
 </nav>
