--- a/src/sass/atoms/_paragraphs.scss
+++ b/src/sass/atoms/_paragraphs.scss
@@ -3,5 +3,5 @@
 // ---------------------------------------------------------------------------------
 
 p {
-  @include margin(0 null rem(16)); // [TODO] - This might be a universal spacing so make global?
+  @include margin(0 null su(2)); // [TODO] - This might be a universal spacing so make global?
 }
