--- a/src/sass/manifest.scss
+++ b/src/sass/manifest.scss
@@ -13,8 +13,10 @@
 
 @import 'utilities/settings/fonts';
 @import 'utilities/settings/breakpoints';
+@import 'utilities/settings/space';
 @import 'utilities/libraries/colors', 'utilities/helpers/setColor';
 @import 'utilities/libraries/svgs', 'utilities/helpers/setSVG';
+@import 'utilities/libraries/spacing-units', 'utilities/helpers/su';
 
 // Quarks
 
