--- a/src/sass/molecules/_article-content.scss
+++ b/src/sass/molecules/_article-content.scss
@@ -3,9 +3,7 @@
 // ---------------------------------------------------------------------------------
 
 .article-content {
-	margin-top: em(8);
-
   p {
-    margin-bottom: em(8);
-  }
+		margin-bottom: su(1);
+	}
 }
