--- a/src/sass/organisms/_article.scss
+++ b/src/sass/organisms/_article.scss
@@ -3,7 +3,7 @@
 // ---------------------------------------------------------------------------------
 
 .article {
-  margin-bottom: em(32);
+  margin-bottom: su(4);
 
   &:last-child {
     margin-bottom: 0;
