--- a/src/sass/templates/_all.scss
+++ b/src/sass/templates/_all.scss
@@ -4,14 +4,14 @@
 
 .page {
   @include outer-container(rem(960));
-  margin-top: rem(32);
-  padding-left: em(16);
-  padding-right: em(16);
+  margin-top: su(4);
+  padding-left: su(2);
+  padding-right: su(2);
 
   @include media($bp-medium) {
-    margin-top: rem(64);
-    padding-left: em(32);
-    padding-right: em(32);
+    margin-top: su(8);
+    padding-left: su(4);
+    padding-right: su(4);
   }
 }
 
@@ -56,7 +56,7 @@
   @include media($bp-medium) {
     @include shift(2);
     @include span-columns(10);
-    margin-bottom: rem(32);
+    margin-bottom: su(4);
   }
 }
 
@@ -70,12 +70,12 @@
 
 .section {
   @include span-columns(12);
-  margin-bottom: rem(24);
+  margin-bottom: su(3);
 
   @include media($bp-medium) {
     @include shift(2);
     @include span-columns(10);
-    margin-bottom: rem(32);
+    margin-bottom: su(4);
   }
 }
 
@@ -115,9 +115,9 @@
 }
 
 .floating-action-button {
-  @include position(fixed, null em(12) em(12) null);
+  @include position(fixed, null su(2) su(2) null);
 
   @include media($bp-large) {
-    @include position(fixed, null em(24) em(24) null);
+    @include position(fixed, null su(3) su(3) null);
   }
 }
