--- a/src/mustache/partials/global/top.mustache
+++ b/src/mustache/partials/global/top.mustache
@@ -1,1 +1,1 @@
-<a class="floating-action-button js-top" title="Return to top of page" href="#">Return to top of page</a>
+<a class="icon icon-arrow floating-action-button js-top" title="Return to top of page" href="#">Return to top of page</a>
