Initial print optimisation work on header region

--- a/src/sass/atoms/_avatar.scss
+++ b/src/sass/atoms/_avatar.scss
@@ -13,4 +13,8 @@
   @include media($bp-medium) {
     background-position: top right;
   }
+
+  @media print {
+    display: none !important; // The !important is unpleasant but will do for now
+  }
 }
