--- a/src/sass/molecules/_nav-contact.scss
+++ b/src/sass/molecules/_nav-contact.scss
@@ -7,6 +7,10 @@
     @include media($bp-medium) {
       @include group-horizontal();
     }
+
+    @media print {
+      @include group-horizontal();
+    }
   }
 
   a {
