--- a/src/sass/atoms/_headings.scss
+++ b/src/sass/atoms/_headings.scss
@@ -25,6 +25,7 @@ h1 {
   }
 
   @media print  {
+    font-size: rem(24);
     text-align: left;
   }
 }
@@ -33,12 +34,20 @@ h2 {
   color: setColor(neutral, color_gray_20);
   font-size: rem(32);
   font-weight: 900;
+
+  @media print  {
+    font-size: rem(24);
+  }
 }
 
 h3 {
   color: setColor(neutral, color_gray_20);
   font-size: rem(24);
   font-weight: 900;
+
+  @media print  {
+    font-size: rem(18);
+  }
 }
 
 // Primary headings on header and sections
