--- a/src/mustache/partials/content/section-skills.mustache
+++ b/src/mustache/partials/content/section-skills.mustache
@@ -20,11 +20,14 @@
       <li class="tag"><a rel="external" href="http://gruntjs.com">Grunt</a></li>
       <li class="tag"><a rel="external" href="https://git-scm.com">Git</a></li>
       <li class="tag"><a rel="external" href="https://bower.io">Bower</a></li>
+      <li class="tag"><a rel="external" href="https://wordpress.org">Wordpress</a></li>
+      <li class="tag"><a rel="external" href="https://craftcms.com">Craft CMS</a></li>
+      <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">Unix Command Line</a></li>
       <li class="tag"><a rel="external" href="https://www.vagrantup.com">Vagrant</a></li>
+      <li class="tag"><a rel="external" href="https://en.wikipedia.org/wiki/LAMP_(software_bundle)">LAMP Stack</a></li>
       <li class="tag"><a rel="external" href="http://foundation.zurb.com">Foundation</a></li>
       <li class="tag"><a rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
       <li class="tag"><a rel="external" href="https://www.scrum.org/Resources/What-is-Scrum">Scrum</a></li>
-      <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">UNIX</a></li>
     </ul>
   </div>
 </section>
