--- a/src/sass/templates/_all.scss
+++ b/src/sass/templates/_all.scss
@@ -66,7 +66,7 @@
   }
 
   @media print {
-    @include position(absolute, su(1) 0 null null);
+    @include position(absolute, rem(14) 0 null null);
     @include span-columns(9);
     @include omega();
     text-align: right;
