Work history updates

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -5,6 +5,67 @@
   </header>
 
   <div class="section-content">
+
+    <article class="article article-work">
+      <header class="article-header">
+        <h3 class="article-heading">Rebrand implementation and site maintenance for Pegasus</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.thisispegasus.co.uk">www.thisispegasus.co.uk</a>
+          <span class="duration">
+            <time datetime="05-2017">May 2017</time>
+          </span>
+        </div>
+      </header>
+
+      <div class="article-content">
+        <p>A short contract to help cover the maintenance of existing client sites and aid with the implementation of the companies rebranding.</p>
+        <ul class="list">
+          <li>Worked on updateds to multiple Wordpress sites using plugins such as <a rel="external" href="https://www.upstatement.com/timber">Timber</a>, <a rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a> and alternative code structures such as <a rel="external" href="https://roots.io/bedrock">Bedrock</a>.</li>
+          <li>Partnered with a designer to implementa rebrand of the company blog <a rel="external" href="http://www.pegasuspulse.com">Pegasus Pulse</a> and improve the layout and responsive code as much as possible.</li>
+        </ul>
+      </div>
+    </article>
+
+    <article class="article article-work">
+      <header class="article-header">
+        <h3 class="article-heading">Wordpress customisation and theming for Tilt</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://wearetilt.com/">www.wearetilt.com</a>
+          <span class="duration">
+            <time datetime="04-2017">April 2017</time> to <time datetime="05-2017">May 2017</time>
+          </span>
+        </div>
+      </header>
+
+      <div class="article-content">
+        <p>Brought in to cover holiday leave, I worked on Wordpress site builds for <a rel="external" href="http://www.innovationunit.org">Innovation Unit</a> and <a rel="external" href="https://vintage.tv">Vintage TV</a>.</p>
+        <ul class="list">
+          <li>Utilised the <a rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a> plugin amongst others, to create rich, reusable content modules in Wordpress</li>
+          <li>Created front end using PHP and the Wordpress template hierarchy</li>
+          <li>Worked closely with other developers on these projects to ensure work was carried out efficiently and to deadline</li>
+        </ul>
+      </div>
+    </article>
+
+    <article class="article article-work">
+      <header class="article-header">
+        <h3 class="article-heading">Brand style-guide app update for Futurebrand</h3>
+        <div class="article-metadata">
+          <a rel="external" href="http://www.sussex.ac.uk">www.sussex.ac.uk</a>
+          <span class="duration">
+            <time datetime="03-2017">March 2017</time> to <time datetime="04-2017">April 2017</time>
+          </span>
+        </div>
+      </header>
+
+      <div class="article-content">
+        <p>Working on Futurebrand’s style-guide application, based on Craft CMS.</p>
+        <ul class="list">
+          <li>Templatised designs for new sections of the application in Twig, JavaScript and SASS.</li>
+        </ul>
+      </div>
+    </article>
+
     <article class="article article-work">
       <header class="article-header">
         <h3 class="article-heading">University of Sussex redesign</h3>
