--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -20,7 +20,7 @@
       <div class="article-content">
         <p>A short contract to help cover the maintenance of existing client sites and aid with the implementation of the companies rebranding.</p>
         <ul class="list">
-          <li>Worked on updateds to multiple Wordpress sites using plugins such as <a rel="external" href="https://www.upstatement.com/timber">Timber</a>, <a rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a> and alternative code structures such as <a rel="external" href="https://roots.io/bedrock">Bedrock</a>.</li>
+          <li>Worked on updates to multiple Wordpress sites using plugins such as <a rel="external" href="https://www.upstatement.com/timber">Timber</a>, <a rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a> and alternative code structures such as <a rel="external" href="https://roots.io/bedrock">Bedrock</a>.</li>
           <li>Partnered with a designer to implementa rebrand of the company blog <a rel="external" href="http://www.pegasuspulse.com">Pegasus Pulse</a> and improve the layout and responsive code as much as possible.</li>
         </ul>
       </div>
