Content improvements and adjusted spacing on contact options

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -21,7 +21,7 @@
         <p>A short contract to help cover the maintenance of existing client sites and aid with the implementation of the companies rebranding.</p>
         <ul class="list">
           <li>Worked on updates to multiple Wordpress sites using plugins such as <a rel="external" href="https://www.upstatement.com/timber">Timber</a>, <a rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a> and alternative code structures such as <a rel="external" href="https://roots.io/bedrock">Bedrock</a>.</li>
-          <li>Partnered with a designer to implementa rebrand of the company blog <a rel="external" href="http://www.pegasuspulse.com">Pegasus Pulse</a> and improve the layout and responsive code as much as possible.</li>
+          <li>Partnered with a designer to implement the company rebrand on the intranet, and their blog <a rel="external" href="http://www.pegasuspulse.com">Pegasus Pulse</a> - improved the layout and responsive code.</li>
         </ul>
       </div>
     </article>
@@ -38,11 +38,12 @@
       </header>
 
       <div class="article-content">
-        <p>Brought in to cover holiday leave, I worked on Wordpress site builds for <a rel="external" href="http://www.innovationunit.org">Innovation Unit</a> and <a rel="external" href="https://vintage.tv">Vintage TV</a>.</p>
+        <p>Brought in to cover holiday leave, I worked on Wordpress site builds for two client projects both of which are now live.</p>
         <ul class="list">
-          <li>Utilised the <a rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a> plugin amongst others, to create rich, reusable content modules in Wordpress</li>
-          <li>Created front end using PHP and the Wordpress template hierarchy</li>
-          <li>Worked closely with other developers on these projects to ensure work was carried out efficiently and to deadline</li>
+          <li>Utilised the <a rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a> plugin amongst others, to create rich, reusable content modules in Wordpress.</li>
+          <li>Created front end templates using PHP and the Wordpress template hierarchy.</li>
+          <li>Implemented responsive layouts from designs provided in Adobe UX.</li>
+          <li>Worked closely with other developers on these projects to ensure work was carried out efficiently and to deadline.</li>
         </ul>
       </div>
     </article>
@@ -61,7 +62,7 @@
       <div class="article-content">
         <p>Working on Futurebrand’s style-guide application, based on Craft CMS.</p>
         <ul class="list">
-          <li>Templatised designs for new sections of the application in Twig, JavaScript and SASS.</li>
+          <li>Templatised responisve designs for new sections of the application in Twig, JavaScript and SASS.</li>
         </ul>
       </div>
     </article>
