Admentments for print and fixed some small issues

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -62,7 +62,8 @@
       <div class="article-content">
         <p>Working on Futurebrand’s style-guide application, based on Craft CMS.</p>
         <ul class="list">
-          <li>Templatised responisve designs for new sections of the application in Twig, JavaScript and SASS.</li>
+          <li>Created responisve layouts for new sections of the application from Sketch designs in Zeplin.</li>
+          <li>Templatised responisve layouts in Twig.</li>
         </ul>
       </div>
     </article>
