--- a/src/sass/molecules/_floating-action-button.scss
+++ b/src/sass/molecules/_floating-action-button.scss
@@ -16,6 +16,10 @@
   display: none;
   padding: initial;
 
+  @media print {
+    display: none !important;
+  }
+
   // Icon
   &:before {
     @include animation-spin(0, 0.25s, $direction: counter-clockwise);
