Updated career and skills sections

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -8,6 +8,43 @@
 
     <article class="article article-work">
       <header class="article-header">
+        <h3 class="article-heading">Senior Software Developer at Brilliant Noise</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.brilliantnoise.com">www.brilliantnoise.com</a>
+          <span class="duration">
+            <time datetime="09-2017">September 2017</time> to <time datetime="12-2017">Present</time>
+          </span>
+        </div>
+      </header>
+
+      <div class="article-content">
+        <p>Working on numerous internal and client projects across a wide range of technologies.</p>
+      </div>
+    </article>
+
+    <article class="article article-work">
+      <header class="article-header">
+        <h3 class="article-heading">Site improvements and maintenance for Starling Bank</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.starlingbank.com">www.starlingbank.com</a>
+          <span class="duration">
+            <time datetime="06-2017">June 2017</time> to <time datetime="09-2017">September 2017</time>
+          </span>
+        </div>
+      </header>
+
+      <div class="article-content">
+        <p>Took over responsibility for the marketing and community sites for Starling Bank while a new permanent developer was hired.</p>
+        <ul class="list">
+          <li>Worked with the marketing team on updates to the Starling Bank site.</li>
+          <li>Advised and aided on performance and SEO optimisation improvement work.</li>
+          <li>Implemented changes and fixes to the Discourse community site</li>
+        </ul>
+      </div>
+    </article>
+
+    <article class="article article-work">
+      <header class="article-header">
         <h3 class="article-heading">Rebrand implementation and site maintenance for Pegasus</h3>
         <div class="article-metadata">
           <a rel="external" href="https://www.thisispegasus.co.uk">www.thisispegasus.co.uk</a>
