--- a/src/mustache/partials/content/section-skills.mustache
+++ b/src/mustache/partials/content/section-skills.mustache
@@ -17,7 +17,9 @@
       <li class="tag"><a rel="external" href="https://jquery.com">jQuery</a></li>
       <li class="tag"><a rel="external" href="http://requirejs.org">RequireJS</a></li>
       <li class="tag"><a rel="external" href="https://nodejs.org">NodeJS</a></li>
-      <li class="tag"><a rel="external" href="http://gruntjs.com">Grunt</a></li>
+      <li class="tag"><a rel="external" href="https://expressjs.com">Express</a></li>
+      <li class="tag"><a rel="external" href="https://gruntjs.com">Grunt</a></li>
+      <li class="tag"><a rel="external" href="https://gulpjs.com">Gulp</a></li>
       <li class="tag"><a rel="external" href="https://git-scm.com">Git</a></li>
       <li class="tag"><a rel="external" href="https://bower.io">Bower</a></li>
       <li class="tag"><a rel="external" href="https://wordpress.org">Wordpress</a></li>
