Updated CV careers section and removed twitter link

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -18,7 +18,12 @@
       </header>
 
       <div class="article-content">
-        <p>Working on numerous internal and client projects across a wide range of technologies.</p>
+        <p>Working on several internal and client projects across a wide range of technologies.</p>
+        <ul class="list">
+          <li>Wordpress configuration and customisation using <a rel="external" href="https://www.advancedcustomfields.com">ACF Pro</a>.</li>
+          <li>Wordpress REST API customisation.</li>
+          <li><a rel="external" href="https://nodejs.org">Node</a> and <a rel="external" href="https://expressjs.com">Express</a> web application creation and deployment to <a rel="external" href="https://www.heroku.com">Heroku</a>.</li>
+        </ul>
       </div>
     </article>
 
@@ -36,7 +41,7 @@
       <div class="article-content">
         <p>Took over responsibility for the marketing and community sites for Starling Bank while a new permanent developer was hired.</p>
         <ul class="list">
-          <li>Worked with the marketing team on updates to the Starling Bank site.</li>
+          <li>Worked with the marketing team on <a rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a> customisations and updates to the Wordpress based Starling Bank site.</li>
           <li>Advised and aided on performance and SEO optimisation improvement work.</li>
           <li>Implemented changes and fixes to the Discourse community site</li>
         </ul>
