Added PHP and MySQL to skills

--- a/src/mustache/partials/content/section-skills.mustache
+++ b/src/mustache/partials/content/section-skills.mustache
@@ -23,6 +23,8 @@
       <li class="tag"><a rel="external" href="https://git-scm.com">Git</a></li>
       <li class="tag"><a rel="external" href="https://bower.io">Bower</a></li>
       <li class="tag"><a rel="external" href="https://wordpress.org">Wordpress</a></li>
+      <li class="tag"><a rel="external" href="http://www.php.net">PHP</a></li>
+      <li class="tag"><a rel="external" href="https://www.mysql.com">MySQL</a></li>
       <li class="tag"><a rel="external" href="https://craftcms.com">Craft CMS</a></li>
       <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">Unix Command Line</a></li>
       <li class="tag"><a rel="external" href="https://www.vagrantup.com">Vagrant</a></li>
