Set up error handling on uglify and added JavaScript assets

--- a/src/hbs/partials/global/top.hbs
+++ b/src/hbs/partials/global/top.hbs
@@ -1,1 +1,1 @@
-<a class="icon icon-arrow floating-action-button js-top" title="Return to top of page" href="#">Return to top of page</a>
+<div class="icon icon-arrow floating-action-button js-top" title="Return to top of page">Return to top of page</div>
