--- a/src/hbs/partials/global/head.hbs
+++ b/src/hbs/partials/global/head.hbs
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Richard Cookson - Front end web developer and designe</title>
+  <title>Richard Cookson - Front end web developer and designer</title>
 
   <meta name="description" content="A freelance web developer with over sixteen years of experience. My primary focus is on front end web development and responsive web design, generally of content based web sites, and on projects ranging in size from a single page to serving content created by thousands of users.">
   <meta name="keywords" content="richard cookson, freelance web developer, brighton front end web developer, brighton web developer, freelance web developer brighton">
