Updated skills and latest work

--- a/src/hbs/partials/content/section-skills.hbs
+++ b/src/hbs/partials/content/section-skills.hbs
@@ -14,23 +14,22 @@
       <li class="tag"><a rel="external" href="https://en.wikipedia.org/wiki/Responsive_web_design">Responsive Design</a></li>
       <li class="tag"><a rel="external" href="https://www.sketchapp.com">Sketch</a></li>
       <li class="tag"><a rel="external" href="https://www.w3.org/Graphics/SVG">SVG</a></li>
-      <li class="tag"><a rel="external" href="https://nodejs.org">NodeJS</a></li>
+      <li class="tag"><a rel="external" href="https://reactjs.org">React</a></li>
       <li class="tag"><a rel="external" href="https://expressjs.com">Express</a></li>
+      <li class="tag"><a rel="external" href="https://www.mongodb.com">MongoDB</a></li>
+      <li class="tag"><a rel="external" href="https://nodejs.org">Node</a></li>
+      <li class="tag"><a rel="external" href="https://webpack.js.org">Webpack</a></li>
       <li class="tag"><a rel="external" href="https://jquery.com">jQuery</a></li>
-      <li class="tag"><a rel="external" href="https://gruntjs.com">Grunt</a></li>
       <li class="tag"><a rel="external" href="https://gulpjs.com">Gulp</a></li>
+      <li class="tag"><a rel="external" href="https://gruntjs.com">Grunt</a></li>
       <li class="tag"><a rel="external" href="https://git-scm.com">Git</a></li>
-      <li class="tag"><a rel="external" href="https://bower.io">Bower</a></li>
       <li class="tag"><a rel="external" href="https://wordpress.org">Wordpress</a></li>
-      <li class="tag"><a rel="external" href="http://www.php.net">PHP</a></li>
-      <li class="tag"><a rel="external" href="https://www.mysql.com">MySQL</a></li>
       <li class="tag"><a rel="external" href="https://craftcms.com">Craft CMS</a></li>
+      <li class="tag"><a rel="external" href="https://en.wikipedia.org/wiki/LAMP_(software_bundle)">LAMP Stack</a></li>
       <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">Unix Command Line</a></li>
       <li class="tag"><a rel="external" href="https://www.vagrantup.com">Vagrant</a></li>
-      <li class="tag"><a rel="external" href="https://en.wikipedia.org/wiki/LAMP_(software_bundle)">LAMP Stack</a></li>
       <li class="tag"><a rel="external" href="http://foundation.zurb.com">Foundation</a></li>
       <li class="tag"><a rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
-      <li class="tag"><a rel="external" href="https://www.scrum.org/Resources/What-is-Scrum">Scrum</a></li>
     </ul>
   </div>
 </section>
