--- a/src/hbs/partials/content/section-skills.hbs
+++ b/src/hbs/partials/content/section-skills.hbs
@@ -30,6 +30,7 @@
       <li class="tag"><a rel="external" href="https://www.vagrantup.com">Vagrant</a></li>
       <li class="tag"><a rel="external" href="http://foundation.zurb.com">Foundation</a></li>
       <li class="tag"><a rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
+      <li class="tag"><a rel="external" href="https://www.scrum.org/Resources/What-is-Scrum">Scrum</a></li>
     </ul>
   </div>
 </section>
