Added missing fullstop

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -20,7 +20,7 @@
       <div class="article-content">
         <p>Working as a senior software developer, I was responsible for developing and expanding several internal software projects, as well as aiding with client work.</p>
         <ul class="list">
-          <li>Led a project to create a content organisation application using <a rel="external" href="https://reactjs.org">React</a>, <a rel="external" href="https://nodejs.org">Node</a>, <a rel="external" href="https://expressjs.com">Express</a> and <a rel="external" href="https://www.mongodb.com">MongoDB</a></li>
+          <li>Led a project to create a content organisation application using <a rel="external" href="https://reactjs.org">React</a>, <a rel="external" href="https://nodejs.org">Node</a>, <a rel="external" href="https://expressjs.com">Express</a> and <a rel="external" href="https://www.mongodb.com">MongoDB</a>.</li>
           <li>Customised and extended the REST API of a headless Wordpress multisite installation, providing content to custom front end interfaces built with Express and Handlebars.</li>
           <li>Expanded and improved the same Wordpress sites content editing functions using <a rel="external" href="https://www.advancedcustomfields.com">ACF Pro</a>.</li>
           <li>Reverse engineered existing web applications, fixing bugs and creating technical documentation for them.</li>
