Updated career history

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -8,11 +8,31 @@
 
     <article class="article article-work">
       <header class="article-header">
+        <h3 class="article-heading">Vue.js web application development for Lumesse</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.lumesselearning.com">www.lumesselearning.com</a>
+          <span class="duration">
+            <time datetime="03-2018">March 2018</time> to <time datetime="04-2018">April 2018</time>
+          </span>
+        </div>
+      </header>
+
+      <div class="article-content">
+        <p>Responsible for development of a Vue.js based learning application based on Lumesse internal framework.</p>
+        <ul class="list">
+          <li>Developed a <a rel="external" href="https://vuejs.org">Vue.js</a> web app based on designs, coding custom components and integrating existing ones.</li>
+          <li>Fixed bugs and made content adjustments to several other applications.</li>
+        </ul>
+      </div>
+    </article>
+
+    <article class="article article-work">
+      <header class="article-header">
         <h3 class="article-heading">MERN and Wordpress application development for Brilliant Noise</h3>
         <div class="article-metadata">
           <a rel="external" href="https://www.brilliantnoise.com">www.brilliantnoise.com</a>
           <span class="duration">
-            <time datetime="09-2017">September 2017</time> to <time datetime="12-2017">Present</time>
+            <time datetime="09-2017">September 2017</time> to <time datetime="03-2018">March 2018</time>
           </span>
         </div>
       </header>
