Updated career history

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -8,6 +8,27 @@
 
     <article class="article article-work">
       <header class="article-header">
+        <h3 class="article-heading">Lead developer on large multiple website project</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.wearetilt.com">www.wearetilt.com</a>
+          <span class="duration">
+            <time datetime="03-2018">April 2018</time> to <time datetime="03-2019">March 2019</time>
+          </span>
+        </div>
+      </header>
+
+      <div class="article-content">
+        <p>Lead developer on small team creating an onboarding portal for large multinational professional services client, as well as associated sub-sites.</p>
+        <ul class="list">
+          <li>Created initial tooling stack based on Node and Gulp</li>
+          <li>Assisted with management of development team and code review processes</li>
+          <li>Worked closely with CMS developers to integrate produced templates</li>
+        </ul>
+      </div>
+    </article>
+
+    <article class="article article-work">
+      <header class="article-header">
         <h3 class="article-heading">Vue.js web application development for Lumesse</h3>
         <div class="article-metadata">
           <a rel="external" href="https://www.lumesselearning.com">www.lumesselearning.com</a>
