--- a/src/hbs/partials/content/section-about.hbs
+++ b/src/hbs/partials/content/section-about.hbs
@@ -3,8 +3,8 @@
     <h2>And finally&hellip;</h2>
   </header>
   <div class="section-content">
-    <p>I’m a big music fan and love going to see bands play live whether at local gigs or festivals. I’ve also been playing video games since the days of the first home computers and retain an interest in how they drive technology forwards.</p>
-    <p>More actively, I enjoy running, swimming and hiking the coast and countryside around Brighton.</p>
+    <p>I’m a big music fan and love going to see bands play live whether at local gigs or festivals.</p>
+    <p>More actively, I enjoy running, swimming and hiking the coast and countryside around Brighton, and recently learnt to SCUBA dive.</p>
     <p>I’ve never seen a UFO but I have (possibly) seen a ghost.</p>
   </div>
 </section>
