Updated career history and skills

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -8,7 +8,7 @@
 
     <article class="article article-work">
       <header class="article-header">
-        <h3 class="article-heading">Lead developer on large multiple website project</h3>
+        <h3 class="article-heading">Lead developer creating a large web portal for Tilt</h3>
         <div class="article-metadata">
           <a rel="external" href="https://www.wearetilt.com">www.wearetilt.com</a>
           <span class="duration">
@@ -18,7 +18,7 @@
       </header>
 
       <div class="article-content">
-        <p>Lead developer on small team creating an onboarding portal for large multinational professional services client, as well as associated sub-sites.</p>
+        <p>Lead developer in a team creating an onboarding portal and associated sites for a large multinational professional services client.</p>
         <ul class="list">
           <li>Created initial tooling stack based on Node and Gulp</li>
           <li>Assisted with management of development team and code review processes</li>
