--- a/src/hbs/partials/content/section-skills.hbs
+++ b/src/hbs/partials/content/section-skills.hbs
@@ -9,11 +9,11 @@
       <li class="tag"><a rel="external" href="http://sass-lang.com">SASS</a></li>
       <li class="tag"><a rel="external" href="https://www.w3.org/standards/webdesign/accessibility">Accessibility</a></li>
       <li class="tag"><a rel="external" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a></li>
-      <li class="tag"><a rel="external" href="https://reactjs.org">React</a></li>
+      <!-- <li class="tag"><a rel="external" href="https://reactjs.org">React</a></li> -->
       <li class="tag"><a rel="external" href="https://expressjs.com">Express</a></li>
       <li class="tag"><a rel="external" href="https://nodejs.org">Node</a></li>
-      <li class="tag"><a rel="external" href="https://www.mongodb.com">MongoDB</a></li>
-      <li class="tag"><a rel="external" href="https://webpack.js.org">Webpack</a></li>
+      <!-- <li class="tag"><a rel="external" href="https://www.mongodb.com">MongoDB</a></li> -->
+      <!-- <li class="tag"><a rel="external" href="https://webpack.js.org">Webpack</a></li> -->
       <li class="tag"><a rel="external" href="https://jquery.com">jQuery</a></li>
       <li class="tag"><a rel="external" href="https://gulpjs.com">Gulp</a></li>
       <li class="tag"><a rel="external" href="https://gruntjs.com">Grunt</a></li>
