--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -126,7 +126,7 @@
         <ul class="list">
           <li>Utilised the <a rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a> plugin amongst others, to create rich, reusable content modules in Wordpress.</li>
           <li>Created front end templates using PHP and the Wordpress template hierarchy.</li>
-          <li>Implemented responsive layouts from designs provided in Adobe UX.</li>
+          <li>Implemented responsive layouts from designs provided in Adobe XD.</li>
           <li>Worked closely with other developers on these projects to ensure work was carried out efficiently and to deadline.</li>
         </ul>
       </div>
