--- a/src/hbs/partials/global/head.hbs
+++ b/src/hbs/partials/global/head.hbs
@@ -1,6 +1,14 @@
 <head>
   <meta charset="utf-8">
+
   <title>{{title}}</title>
-  <meta name="viewport" content="width=device-width">
+
+  <meta name="description" content="{{description}}">
+  <meta name="keywords" content="{{keywords}}">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <script src="https://use.typekit.net/opv2wpe.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
